# ghtopdep

./: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-approve.yml  osv-scanner-pr.yml  osv-scanner-scheduled.yml
ghtopdep/: __init__.py  cli.py
tests/: README.md  __init__.py  conftest.py  test_additional_coverage.py  test_cli.py  test_coverage_improvements.py  test_e2e.py  test_error_handling.py  test_error_handling_integration.py  test_parsing.py  test_unit_functions.py  test_validation.py
