[project]
name = "ghtopdep"
dynamic = ["version"]
description = "CLI tool for sorting dependents repositories and packages by stars"
authors = [
    {name = "Andriy Orehov", email = "andriyorehov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["github", "dependencies", "cli", "stars", "sorting", "dependents", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

dependencies = [
    "selectolax>=0.3.7,<0.4.0",
    "tabulate>=0.8.3,<0.9.0",
    "click>=8.1.2,<9.0.0",
    "requests>=2.22,<3.0.0",
    "github3-py>=4.0.1,<5.0.0",
    "appdirs>=1.4.4,<2.0.0",
    "pipdate>=0.5.6,<0.6.0",
    "cachecontrol[filecache]>=0.14.0,<0.15.0",
    "tqdm>=4.66.4,<5.0.0",
]

[project.urls]
Source = "https://github.com/github-tooling/ghtopdep"
"Bug Tracker" = "https://github.com/github-tooling/ghtopdep/issues"
Homepage = "https://github.com/github-tooling/ghtopdep"
Documentation = "https://github.com/github-tooling/ghtopdep#readme"

[project.scripts]
ghtopdep = "ghtopdep.cli:cli"

[dependency-groups]
dev = [
    "better-exceptions>=0.2.2,<0.3.0",
    "pysnooper>=0.3.0,<0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ghtopdep/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["ghtopdep"]
